--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .DS_Store
+.idea
 
 application/cache/*
 !application/cache/index.html
@@ -7,4 +8,6 @@ application/cache/*
 application/logs/*
 !application/logs/index.html
 !application/logs/.htaccess
-.idea
+
+
+application/tests/coverage/*
